--- a/GoyalEMS/AppLayout/AdminLayout.Master
+++ b/GoyalEMS/AppLayout/AdminLayout.Master
@@ -12,41 +12,62 @@
     <script src="../ClientLib/toastr.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="../Admin/Department.aspx">Department</a>
-                    <a class="nav-link" href="../Admin/BulkDepartmentInsert.aspx">Bulk Upload</a>
-                    <a class="nav-link" href="../Admin/Employee.aspx">Employee</a>
+    <form runat="server" id="form1">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="../Admin/Department.aspx">Department</a>
+                        <a class="nav-link" href="../Admin/BulkDepartmentInsert.aspx">Bulk Upload</a>
+                        <a class="nav-link" href="../Admin/Employee.aspx">Employee</a>
 
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+
+                        <%
+                            if (HttpContext.Current.User.Identity.IsAuthenticated)
+                            {
+                        %>
+                        <asp:LinkButton
+                            runat="server" ID="btnLogout"
+                            Text="Logout"
+                            CssClass="nav-link"
+                            OnClick="btnLogout_Click">
+
+                        </asp:LinkButton>
+                        <a class="nav-link" href="#">
+                            <%
+                                Response.Write(HttpContext.Current.User.Identity.Name);
+                            %>
+                        </a>
+                        <%
+                            }
+                        %>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    <div class="container-fluid">
-        <div class="row">
-            <form runat="server" id="form1">
+        <div class="container-fluid">
+            <div class="row">
+
                 <asp:ContentPlaceHolder ID="childpages" runat="server"></asp:ContentPlaceHolder>
-            </form>
+
+            </div>
+
+
+            <div class="row">
+                <footer>
+                    <div class="row bg-light text-center">
+                        <span><b>All right reserved by QuickXpert - </b></span><% Response.Write(DateTime.Now.ToLongDateString()); %>
+                    </div>
+                </footer>
+            </div>
         </div>
-
-
-        <div class="row">
-            <footer>
-                <div class="row bg-light text-center">
-                    <span><b>All right reserved by QuickXpert - </b></span><% Response.Write(DateTime.Now.ToLongDateString()); %>
-                </div>
-            </footer>
-        </div>
-    </div>
-
+    </form>
 </body>
 </html>
